--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "laravel/lumen-framework": "5.1.*||5.2.*",
+        "laravel/lumen-framework": "5.1.*||5.2.*||5.3.*||5.4.*||5.5.*",
         "cartalyst/sentinel": "~2.0"
     },
     "require-dev": {
